--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,10 +47,10 @@ services:
     ports:
       - "7700:7700"
     environment:
-      - MEILI_MASTER_KEY=${MEILISEARCH_API_KEY}
+      # - MEILI_MASTER_KEY=""
       - MEILI_EXPERIMENTAL_ENABLE_METRICS=true
       - MEILI_NO_ANALYTICS=true
-      - MEILI_ENV=production
+      # - MEILI_ENV=production
     env_file:
       - .env
     volumes:
