--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,18 @@
 services:
-  postgres:
-    image: postgres:13
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
-    ports:
-      - "5432:5432"
+  watchtower:
+    image: containrrr/watchtower
+    container_name: watchtower
+    networks:
+      - search-network
     volumes:
-      - postgres-data:/var/lib/postgresql/data
-    networks:
-      - search-network
-  
-  pgadmin:
-    image: dpage/pgadmin4
-    container_name: pgadmin
-    ports:
-      - "5050:80"
-    environment:
-      - PGADMIN_DEFAULT_EMAIL=test@gmail.com
-      - PGADMIN_DEFAULT_PASSWORD=test
-    networks:
-      - search-network
+      - /var/run/docker.sock:/var/run/docker.sock
+    command: search-container search-cron --interval 3600 --cleanup --include-stopped
+    labels:
+      - logging=promtail
+      - logging_jobname=watchtower
   
   search-conatiner:
-    image: suhach0523/techeerism-search:dev
+    image: suhach0523/techeerism-search:latest
     container_name: search-container
     networks:
       - search-network
@@ -39,6 +27,34 @@ services:
       - JWT_SECRET=${JWT_SECRET}
     ports:
       - "8080:8080"
+    labels:
+      - logging=promtail
+      - logging_jobname=searchContainer
+
+  search-cron:
+    image: suhach0523/techeerism-search-cron:latest
+    container_name: search-cron
+    networks:
+      - search-network
+    env_file:
+      - .env
+    environment:
+      - MEILISEARCH_ADDR=http://meilisearch:7700
+      - MEILISEARCH_KEY=${MEILISEARCH_API_KEY}
+      - GIN_MODE=release
+      - SWAGGER_USERNAME=${SWAGGER_USERNAME}
+      - SWAGGER_PASSWORD=${SWAGGER_PASSWORD}
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_NAME=${DB_NAME}
+      - DB_SSL_MODE=${DB_SSL_MODE}
+    ports:
+      - "8081:8081"
+    labels:
+      - logging=promtail
+      - logging_jobname=searchCron
   
   meilisearch:
     image: getmeili/meilisearch:latest
@@ -48,15 +64,39 @@ services:
     ports:
       - "7700:7700"
     environment:
-      # - MEILI_MASTER_KEY=""
+      - MEILI_MASTER_KEY=${MEILISEARCH_API_KEY}
       - MEILI_EXPERIMENTAL_ENABLE_METRICS=true
       - MEILI_NO_ANALYTICS=true
-      # - MEILI_ENV=production
+      - MEILI_ENV=production
     env_file:
       - .env
     volumes:
       - meilisearch-data:/meili_data/data.ms
     restart: unless-stopped
+  
+  loki:
+    image: grafana/loki:latest
+    container_name: loki
+    ports:
+      - 3100:3100
+    command: -config.file=/etc/loki/local-config.yaml
+    networks:
+      - search-network
+  
+  promtail:
+    image:  grafana/promtail:latest
+    container_name: promtail
+    volumes:
+      - ./promtail/config.yaml:/etc/promtail/docker-config.yaml
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+    command:
+      - -config.file=/etc/promtail/docker-config.yaml
+      - -config.expand-env=true
+    networks:
+      - search-network
+    ports:
+      - 9080:9080
   
   prometheus:
     image: prom/prometheus:v2.45.6
@@ -88,4 +128,3 @@ networks:
 
 volumes:
   meilisearch-data:
-  postgres-data:
