--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -121,6 +121,41 @@ services:
       - "3000:3000"
     networks:
       - search-network
+  
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor
+    ports:
+      - "8080:8080"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /:/rootfs:ro
+      - /var/run:/var/run
+      - /sys:/sys:ro
+      - /var/lib/docker:/var/lib/docker:ro
+    networks:
+      - search-network
+  
+  node-exporter:
+    image: prom/node-exporter:latest
+    ports:
+      - "9100:9100"
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.sysfs=/host/sys'
+      - '--collector.filesystem.ignored-mount-points="^/(sys|proc|dev|host|etc)($$|/)"'
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    networks:
+      - main-network
+    deploy:
+      mode: global
+      placement:
+        constraints:
+          - node.labels.archtype != arm
+    labels:
+      - prometheus-job=node-exporter
 
 networks:
   search-network:
