feat: add create stack to search engine: BACKEND-25 (#9)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - logging_jobname=watchtower
   
   search-conatiner:
-    image: suhach0523/techeerism-search:latest
+    image: search-arm
     container_name: search-container
     networks:
       - search-network
@@ -32,7 +32,8 @@ services:
       - logging_jobname=searchContainer
 
   search-cron:
-    image: suhach0523/techeerism-search-cron:latest
+    build: 
+      context: .
     container_name: search-cron
     networks:
       - search-network
